--- a/HealthCareSystem/src/healthcaresystem/HRMOdule.form
+++ b/HealthCareSystem/src/healthcaresystem/HRMOdule.form
@@ -589,6 +589,7 @@
                         </Property>
                       </Properties>
                       <Events>
+                        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="docMouseClicked"/>
                         <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="docMouseEntered"/>
                         <EventHandler event="mouseExited" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="docMouseExited"/>
                       </Events>
